fix: update and fix bug
